@@ -1,5 +1,6 @@
 2003-01-24    <johan@CP255758-A>
 
+	* src/SDCCglue.c (emitRegularMap): fixed bug #458099 again
 	* src/SDCCast.c (createIvalCharPtr): fixed bug #661910
 
 2003-01-24  Bernhard Held <bernhard@bernhardheld.de>
